--- a/styles.css
+++ b/styles.css
@@ -1,74 +1,116 @@
+/*
+ colors
+ #C27F5C brown main 
+ #F7AF6A light brown
+ #687529 green color
+*/
+@font-face{
+    src: url("/images/bright-daylight.regular.ttf");
+    font-family: pokemon-font;
+}
 body {
-    margin: 20px;
-    /*
-    Challenge:
-    Find a web safe font you like, and add it 
-    to your card.
-    */
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
-}
-
-.avatar {
-    width: 150px;
-}
-
-.card {
-    width: 400px;
-    margin: 0 auto;
-    padding: 20px;
-    display: flex;
-    justify-content: space-around;
     text-align: center;
-    background: #023047;
-    color: #FFB703;
-    border-bottom: 4px solid #FB8500;
-    border-top: #FFB703 inset;
-    border-left: #FFB703 outset;
-    border-right: #FFB703 inset;
-    border-radius: 8px;
-    
-    /*
-    
-    Challenge:
-    Find a color palette you like on Coolors.co
-    and use it in your business card.
-     */
+    font-family: 'pokemon-font', cursive;
+    background: linear-gradient(#F7AF6A, #687529);
+    color: #CECECE;
 }
 
-
-
-.border-blue {
-    border: 1px dotted blue;
+h1, h2, h3, h4, p {
+    text-shadow: 0 0 1px black;
+    font-size: 50px;
 }
 
-h3:hover{
-    text-shadow: 1px 1px 5px #FB8500;
+#bff-img {
+    width: 150px;
+    border-radius: 50%;
+    border: 6px solid #C27F5C;
+    margin-bottom: 10px;
 }
 
-h4:hover { 
-    background-color: #8ECAE6;
-    color: #023047;
+#bday-age {
+    background: #C27F5C;
+    padding: 5px 10px;
+    border-radius: 5px;
+    margin: 5px 0 10px 0;
 }
 
-img:hover {
-    background-color: #8ECAE6;
+#bday-date {
+    margin: 0;
+    background: #C27F5C;
+    padding: 5px 10px;
+    border-radius: 5px;
+}
+
+#header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.gift-section {
+    margin-top: 50px;
+}
+
+.gift-title {
+    margin-bottom: 10px;
+}
+
+.gift-hint {
+    margin-top: 0;
+}
+
+#gift-img-cheers {
+    height: 200px;
+}
+
+.gift-img {
+    margin: 20px auto;
+    max-width: 400px;
+    height: 400px;
+    border: 6px solid white;
+    border-radius: 10px;
+    background-image: url("images/gift-cover.jpg");
+    background-size: cover;
+}
+
+#gift-img-happy:hover {
+    background-image: url("https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExdWFqNzdyOG5kYTBpdjF3cjNqYzBhM2wzNzgyNjQwZnN5a3pwam1tOCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/xuXzcHMkuwvf2/giphy.gif");
+}
+
+#gift-img-hot:hover {
+    background-image: url("images/hot.gif");
+}
+
+#gift-img-genius:hover {
+    background-image: url("images/genius.gif");
+}
+
+#gift-img-badass:hover {
+    background-image: url("images/badass.gif");
+}
+
+#gift-img-cheers:hover {
+    background-image: url("images/cheers.gif");
+}
+
+#footer {
+    font-style: italic;
+    width: 400px;
+    margin: 40px auto 20px;
+}
+
+a {
     color: white;
 }
 
-/*
-Stretch goals:
-Find other ways you can personalize 
-the design of your business card, e.g.:
-- change the border(s) *
-- add border radius *
-- shuffle the layout *
-- shadows        🤯
-- hover effects  🤯🤯
-- animations     🤯🤯🤯
-*/
+/* 
+Add the footer paragraph according to the design. 
+Configure the anchor tag to open the link in a new tab.
+Forgotten how to do it? Google it! 
 
-/*
-Final challenge:
-Download the code to your local computer and place it
-in a folder called "business-card"
+Link: 
+https://scrimba.com/learn/htmlandcss
+
+Text:
+Want to create your own Birthday GIFt site? Take this HTML & CSS course.
 */
